[package]
name = "arkworks-baby-gadgets"
authors = ["Piotr Mikołajczyk <piomiko41@gmail.com>"]
edition = "2024"
repository = "https://github.com/pmikolajczyk41/arkworks-baby-gadgets"
version = "0.1.0"

[dependencies]
ark-crypto-primitives = { version = "^0.5.0" }
ark-ff = { version = "^0.5.0" }
ark-r1cs-std = { version = "^0.5.0" }
ark-relations = { version = "^0.5.0" }
