[package]
name = "arkworks-small-values-ops"
authors = ["Piotr Mikołajczyk <piomiko41@gmail.com>"]
description = "A collection of small values operations for the Arkworks library."
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pmikolajczyk41/arkworks-small-values-ops"
version = "0.0.4"

[dependencies]
ark-bn254 = { version = "^0.5.0" }
ark-ff = { version = "^0.5.0" }
ark-r1cs-std = { version = "^0.5.0" }
ark-relations = { version = "^0.5.0" }
